2013-02-07  Gábor Vida  <gabor.v.vida@ericsson.com>  (tiny change)

	* auth-source.el (auth-source-format-prompt): Don't get confused by
	any "\" in replacement text.  (Bug#13637)

2013-01-30  Christopher Schmidt  <christopher@ch.ristopher.com>

	* gnus-int.el (gnus-backend-trace-elapsed): New variable.
	(gnus-backend-trace): Honour gnus-backend-trace.

	* mml.el (mml-insert-part): Insert closing tag.

	* mm-decode.el (mm-save-part): Handle invalid read-file-name results.

2013-01-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-read-group-1): Protect against not being
	able to find the article, which can happen in debbugs groups,
	apparently.

2013-01-16  Glenn Morris  <rgm@gnu.org>

	* smiley.el (smiley-style): Make the file loadable in batch mode.

2013-01-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-keepalive): Don't throw an error if there's no more
	imap process running.

2013-01-14  Julien Danjou  <julien@danjou.info>

	* gnus-sum.el (gnus-summary-from-or-to-or-newsgroups):
	Compare addresses against addresses, not against the full From field.

2013-01-13  Richard Stallman  <rms@gnu.org>

	* message.el (message-forward-make-body-mime): New args BEG, END
	specify what part of FORWARD-BUFFER to use.  Do the work directly
	instead of calling `mml-insert-buffer'.

2013-01-11  Aaron S. Hawley  <Aaron.Hawley@vtinfo.com>

	* gnus-start.el (gnus-check-new-newsgroups): Fix ambiguous doc string
	cross-reference(s).

	* gnus-sum.el (gnus-summary-newsgroup-prefix): Fix ambiguous doc string
	cross-reference(s).

2013-01-11  Dmitry Antipov  <dmantipov@yandex.ru>

	* gnus-art.el (gnus-mime-display-security): Use point-min-marker
	and point-max-marker.
	* gnus-async.el (gnus-async-article-callback): Use point-max-marker.

2013-01-11  Julien Danjou  <julien@danjou.info>

	* color.el (color-rgb-to-hsv): Fix conversion computing in case min and
	max are almost equal. Also return the correct value for V which is