@@ -214,7 +214,7 @@ Enabling this will have OpenSSL check the signers certificate
 against a certificate revocation list (CRL).
 
 For this to work the CRL must be up-to-date and since they are
-normally updated quite often (ie. several times a day) you
+normally updated quite often (i.e., several times a day) you
 probably need some tool to keep them up-to-date. Unfortunately
 Gnus cannot do this for you.
 
