@@ -1,3 +1,7 @@
+2013-02-13  Glenn Morris  <rgm@gnu.org>
+
+	* message.texi (News Headers): Don't mention yow any more.
+
 2013-01-05  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* auth.texi (VERSION): Set before first use.
